aggiornamento README
non completo, solo una bozza